Overflow-y fix for small mobile devices

--- a/app/react/styles/modules/site.styl
+++ b/app/react/styles/modules/site.styl
@@ -3,4 +3,4 @@
   left 0
 
 .site__content
-  padding-top 150px
+  padding-top 100px
